@@ -4,3 +4,4 @@ plone_initial_password: admin
 
 plone_target_path: '/opt/plone-4.3'
 plone_backup_path: '/var/backups/plone-4.3'
+plone_buildout_git_repo: "https://github.com/smcmahon/zeoserver.git"
